# vision

./: .gitignore  10128681.cobaltlog  10128681.error  10129680.cobaltlog  10129680.error  Dockerfile  LICENSE  README.md  STDIN.e529779  STDIN.o529779  _dist.sh  _multinode.sh  _send.sh  cam.py  dist.sh  env.yml  file.html  helloslurm.sh  jobqueue.sh  makefile  makejob.sh  mpi.sh  multinode.sh  multinode.sh.e516567  newreq.txt  node.sh  oldreq.txt  plotly.ipynb  queue.sh  requirements.txt  run.sh  schedule.sh  send.sh  set_affinity.sh  setup.cfg  speed.sh  temp.py  temp_plot.html  todo.md
CycleGan/: .gan.py.swp  .main.py.swp  gan.py  main.py
DCGAN/: gan.py  main.py
DETR/: engine.py  main.py
GAN/: README.md  main.py
SlowFast/: INSTALL.md
VOLT/: requirements.txt  setup.cfg
VQVAE/: README.md  args.py  datasets.py  functions.py  modules.py  pixelcnn_baseline.py  pixelcnn_prior.py  test_functions.py  vae.py  vqvae.py
ViT/: main.py  requirements.txt  vit.py
ViViT/: module.py  vivit.py
cfg_original/: fast_ffc_arc64.yaml  srnet_arc64.yaml  srnet_ce.yaml
config/: carina.yaml  main.yaml
configs/: .arc.yaml.swp  5x2R_ffc_arc64.yaml  5x2R_srnet_arc64.yaml  5x2_ffc_arc64.yaml  5x2_srnet_arc64.yaml  ANY_srnet_arc64.yaml  JPEG100_ffc_arc64.yaml  JPEG80_ffc_arc64.yaml  JPEG_ffc_arc64.yaml  L1O_5x2_ffc_arc64.yaml  L1O_5x2_ffc_arc64_50L6.yaml  L1O_5x2_ffc_arc64_reverse.yaml  L1O_5x2_srnet_arc64.yaml  L2O_5x2_ffc_arc64.yaml  arc.yaml  ffc.yaml  ffc101.yaml  ffc18_arc64.yaml  ffc26_ce_step_bs256-8.yaml  ffc26_ce_step_bs256.yaml  ffc_arc2.yaml  ffc_arc3.yaml  ffc_ce.yaml  (+26 more)
(+729 files in other folders)
