[metadata]
name = vision
version = 1.0.0
description = language guided action detection, synthetic medical image attribution
author = matt hyatt
author_email = mhyatt@luc.edu
url = "https://mhyatt000.github.io"

[options]
packages = find:

[options.entry_points]
console_scripts =
    vision = vision.main:main
